Kodkod invocation within Isabelle/Scala.

* The jEdit status line includes widgets both for JVM and ML heap usage.
Ongoing ML ongoing garbage collection is shown as "ML cleanup".

* The Monitor dockable provides buttons to request a full garbage
collection and sharing of live data on the ML heap. It also includes
information about the Java Runtime system.

* Update to jedit-5.6.0, the latest release. This version works properly
on macOS by default, without the special MacOSX plugin.


*** Document preparation ***

* Keyword 'document_theories' within ROOT specifies theories from other
sessions that should be included in the generated document source
directory. This does not affect the generated session.tex: \input{...}
needs to be used separately.

* The standard LaTeX engine is now lualatex, according to settings
variable ISABELLE_PDFLATEX. This is mostly upwards compatible with old
pdflatex, but text encoding needs to conform strictly to utf8. Rare
INCOMPATIBILITY.

* Discontinued obsolete DVI format and ISABELLE_LATEX settings variable:
document output is always PDF.

* Antiquotation @{tool} refers to Isabelle command-line tools, with
completion and formal reference to the source (external script or
internal Scala function).

* Antiquotation @{bash_function} refers to GNU bash functions that are
checked within the Isabelle settings environment.

* Antiquotations @{scala}, @{scala_object}, @{scala_type},
@{scala_method} refer to checked Isabelle/Scala entities.


*** Pure ***

* Session Pure-Examples contains notable examples for Isabelle/Pure
(former entries of HOL-Isar_Examples).

* Named contexts (locale and class specifications, locale and class
context blocks) allow bundle mixins for the surface context.  This
allows syntax notations to be organized within bundles conveniently.
See src/HOL/ex/Specifications_with_bundle_mixins.thy for examples
and the Isar reference manual for syntx descriptions.
